lib/verovio/generated_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Verovio C Library wrapper for Dart
class VerovioWrapper {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  VerovioWrapper(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  VerovioWrapper.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Methods exported a functions to use the Toolkit class
  void enableLog(
    bool value,
  ) {
    return _enableLog(
      value,
    );
  }

  late final _enableLogPtr =
      _lookup<ffi.NativeFunction<NativeEnableLog>>('enableLog');
  late final _enableLog = _enableLogPtr.asFunction<DartEnableLog>();

  void enableLogToBuffer(
    bool value,
  ) {
    return _enableLogToBuffer(
      value,
    );
  }

  late final _enableLogToBufferPtr =
      _lookup<ffi.NativeFunction<NativeEnableLogToBuffer>>('enableLogToBuffer');
  late final _enableLogToBuffer =
      _enableLogToBufferPtr.asFunction<DartEnableLogToBuffer>();

  ffi.Pointer<ffi.Void> vrvToolkit_constructor() {
    return _vrvToolkit_constructor();
  }

  late final _vrvToolkit_constructorPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_constructor>>(
          'vrvToolkit_constructor');
  late final _vrvToolkit_constructor =
      _vrvToolkit_constructorPtr.asFunction<DartVrvToolkit_constructor>();

  ffi.Pointer<ffi.Void> vrvToolkit_constructorResourcePath(
    ffi.Pointer<ffi.Char> resourcePath,
  ) {
    return _vrvToolkit_constructorResourcePath(
      resourcePath,
    );
  }

  late final _vrvToolkit_constructorResourcePathPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_constructorResourcePath>>(
          'vrvToolkit_constructorResourcePath');
  late final _vrvToolkit_constructorResourcePath =
      _vrvToolkit_constructorResourcePathPtr
          .asFunction<DartVrvToolkit_constructorResourcePath>();

  void vrvToolkit_destructor(
    ffi.Pointer<ffi.Void> tkPtr,
  ) {
    return _vrvToolkit_destructor(
      tkPtr,
    );
  }

  late final _vrvToolkit_destructorPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_destructor>>(
          'vrvToolkit_destructor');
  late final _vrvToolkit_destructor =
      _vrvToolkit_destructorPtr.asFunction<DartVrvToolkit_destructor>();

  bool vrvToolkit_edit(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.Char> editorAction,
  ) {
    return _vrvToolkit_edit(
      tkPtr,
      editorAction,
    );
  }

  late final _vrvToolkit_editPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_edit>>('vrvToolkit_edit');
  late final _vrvToolkit_edit =
      _vrvToolkit_editPtr.asFunction<DartVrvToolkit_edit>();

  ffi.Pointer<ffi.Char> vrvToolkit_editInfo(
    ffi.Pointer<ffi.Void> tkPtr,
  ) {
    return _vrvToolkit_editInfo(
      tkPtr,
    );
  }

  late final _vrvToolkit_editInfoPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_editInfo>>(
          'vrvToolkit_editInfo');
  late final _vrvToolkit_editInfo =
      _vrvToolkit_editInfoPtr.asFunction<DartVrvToolkit_editInfo>();

  ffi.Pointer<ffi.Char> vrvToolkit_getAvailableOptions(
    ffi.Pointer<ffi.Void> tkPtr,
  ) {
    return _vrvToolkit_getAvailableOptions(
      tkPtr,
    );
  }

  late final _vrvToolkit_getAvailableOptionsPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_getAvailableOptions>>(
          'vrvToolkit_getAvailableOptions');
  late final _vrvToolkit_getAvailableOptions =
      _vrvToolkit_getAvailableOptionsPtr
          .asFunction<DartVrvToolkit_getAvailableOptions>();

  ffi.Pointer<ffi.Char> vrvToolkit_getDefaultOptions(
    ffi.Pointer<ffi.Void> tkPtr,
  ) {
    return _vrvToolkit_getDefaultOptions(
      tkPtr,
    );
  }

  late final _vrvToolkit_getDefaultOptionsPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_getDefaultOptions>>(
          'vrvToolkit_getDefaultOptions');
  late final _vrvToolkit_getDefaultOptions = _vrvToolkit_getDefaultOptionsPtr
      .asFunction<DartVrvToolkit_getDefaultOptions>();

  ffi.Pointer<ffi.Char> vrvToolkit_getDescriptiveFeatures(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.Char> options,
  ) {
    return _vrvToolkit_getDescriptiveFeatures(
      tkPtr,
      options,
    );
  }

  late final _vrvToolkit_getDescriptiveFeaturesPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_getDescriptiveFeatures>>(
          'vrvToolkit_getDescriptiveFeatures');
  late final _vrvToolkit_getDescriptiveFeatures =
      _vrvToolkit_getDescriptiveFeaturesPtr
          .asFunction<DartVrvToolkit_getDescriptiveFeatures>();

  ffi.Pointer<ffi.Char> vrvToolkit_getElementAttr(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.Char> xmlId,
  ) {
    return _vrvToolkit_getElementAttr(
      tkPtr,
      xmlId,
    );
  }

  late final _vrvToolkit_getElementAttrPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_getElementAttr>>(
          'vrvToolkit_getElementAttr');
  late final _vrvToolkit_getElementAttr =
      _vrvToolkit_getElementAttrPtr.asFunction<DartVrvToolkit_getElementAttr>();

  ffi.Pointer<ffi.Char> vrvToolkit_getElementsAtTime(
    ffi.Pointer<ffi.Void> tkPtr,
    int millisec,
  ) {
    return _vrvToolkit_getElementsAtTime(
      tkPtr,
      millisec,
    );
  }

  late final _vrvToolkit_getElementsAtTimePtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_getElementsAtTime>>(
          'vrvToolkit_getElementsAtTime');
  late final _vrvToolkit_getElementsAtTime = _vrvToolkit_getElementsAtTimePtr
      .asFunction<DartVrvToolkit_getElementsAtTime>();

  ffi.Pointer<ffi.Char> vrvToolkit_getExpansionIdsForElement(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.Char> xmlId,
  ) {
    return _vrvToolkit_getExpansionIdsForElement(
      tkPtr,
      xmlId,
    );
  }

  late final _vrvToolkit_getExpansionIdsForElementPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_getExpansionIdsForElement>>(
          'vrvToolkit_getExpansionIdsForElement');
  late final _vrvToolkit_getExpansionIdsForElement =
      _vrvToolkit_getExpansionIdsForElementPtr
          .asFunction<DartVrvToolkit_getExpansionIdsForElement>();

  ffi.Pointer<ffi.Char> vrvToolkit_getHumdrum(
    ffi.Pointer<ffi.Void> tkPtr,
  ) {
    return _vrvToolkit_getHumdrum(
      tkPtr,
    );
  }

  late final _vrvToolkit_getHumdrumPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_getHumdrum>>(
          'vrvToolkit_getHumdrum');
  late final _vrvToolkit_getHumdrum =
      _vrvToolkit_getHumdrumPtr.asFunction<DartVrvToolkit_getHumdrum>();

  ffi.Pointer<ffi.Char> vrvToolkit_convertHumdrumToHumdrum(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.Char> humdrumData,
  ) {
    return _vrvToolkit_convertHumdrumToHumdrum(
      tkPtr,
      humdrumData,
    );
  }

  late final _vrvToolkit_convertHumdrumToHumdrumPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_convertHumdrumToHumdrum>>(
          'vrvToolkit_convertHumdrumToHumdrum');
  late final _vrvToolkit_convertHumdrumToHumdrum =
      _vrvToolkit_convertHumdrumToHumdrumPtr
          .asFunction<DartVrvToolkit_convertHumdrumToHumdrum>();

  ffi.Pointer<ffi.Char> vrvToolkit_convertHumdrumToMIDI(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.Char> humdrumData,
  ) {
    return _vrvToolkit_convertHumdrumToMIDI(
      tkPtr,
      humdrumData,
    );
  }

  late final _vrvToolkit_convertHumdrumToMIDIPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_convertHumdrumToMIDI>>(
          'vrvToolkit_convertHumdrumToMIDI');
  late final _vrvToolkit_convertHumdrumToMIDI =
      _vrvToolkit_convertHumdrumToMIDIPtr
          .asFunction<DartVrvToolkit_convertHumdrumToMIDI>();

  ffi.Pointer<ffi.Char> vrvToolkit_convertMEIToHumdrum(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.Char> meiData,
  ) {
    return _vrvToolkit_convertMEIToHumdrum(
      tkPtr,
      meiData,
    );
  }

  late final _vrvToolkit_convertMEIToHumdrumPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_convertMEIToHumdrum>>(
          'vrvToolkit_convertMEIToHumdrum');
  late final _vrvToolkit_convertMEIToHumdrum =
      _vrvToolkit_convertMEIToHumdrumPtr
          .asFunction<DartVrvToolkit_convertMEIToHumdrum>();

  ffi.Pointer<ffi.Char> vrvToolkit_getLog(
    ffi.Pointer<ffi.Void> tkPtr,
  ) {
    return _vrvToolkit_getLog(
      tkPtr,
    );
  }

  late final _vrvToolkit_getLogPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_getLog>>('vrvToolkit_getLog');
  late final _vrvToolkit_getLog =
      _vrvToolkit_getLogPtr.asFunction<DartVrvToolkit_getLog>();

  ffi.Pointer<ffi.Char> vrvToolkit_getMEI(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.Char> options,
  ) {
    return _vrvToolkit_getMEI(
      tkPtr,
      options,
    );
  }

  late final _vrvToolkit_getMEIPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_getMEI>>('vrvToolkit_getMEI');
  late final _vrvToolkit_getMEI =
      _vrvToolkit_getMEIPtr.asFunction<DartVrvToolkit_getMEI>();

  ffi.Pointer<ffi.Char> vrvToolkit_getMIDIValuesForElement(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.Char> xmlId,
  ) {
    return _vrvToolkit_getMIDIValuesForElement(
      tkPtr,
      xmlId,
    );
  }

  late final _vrvToolkit_getMIDIValuesForElementPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_getMIDIValuesForElement>>(
          'vrvToolkit_getMIDIValuesForElement');
  late final _vrvToolkit_getMIDIValuesForElement =
      _vrvToolkit_getMIDIValuesForElementPtr
          .asFunction<DartVrvToolkit_getMIDIValuesForElement>();

  ffi.Pointer<ffi.Char> vrvToolkit_getNotatedIdForElement(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.Char> xmlId,
  ) {
    return _vrvToolkit_getNotatedIdForElement(
      tkPtr,
      xmlId,
    );
  }

  late final _vrvToolkit_getNotatedIdForElementPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_getNotatedIdForElement>>(
          'vrvToolkit_getNotatedIdForElement');
  late final _vrvToolkit_getNotatedIdForElement =
      _vrvToolkit_getNotatedIdForElementPtr
          .asFunction<DartVrvToolkit_getNotatedIdForElement>();

  ffi.Pointer<ffi.Char> vrvToolkit_getOptions(
    ffi.Pointer<ffi.Void> tkPtr,
  ) {
    return _vrvToolkit_getOptions(
      tkPtr,
    );
  }

  late final _vrvToolkit_getOptionsPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_getOptions>>(
          'vrvToolkit_getOptions');
  late final _vrvToolkit_getOptions =
      _vrvToolkit_getOptionsPtr.asFunction<DartVrvToolkit_getOptions>();

  ffi.Pointer<ffi.Char> vrvToolkit_getOptionUsageString(
    ffi.Pointer<ffi.Void> tkPtr,
  ) {
    return _vrvToolkit_getOptionUsageString(
      tkPtr,
    );
  }

  late final _vrvToolkit_getOptionUsageStringPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_getOptionUsageString>>(
          'vrvToolkit_getOptionUsageString');
  late final _vrvToolkit_getOptionUsageString =
      _vrvToolkit_getOptionUsageStringPtr
          .asFunction<DartVrvToolkit_getOptionUsageString>();

  int vrvToolkit_getPageCount(
    ffi.Pointer<ffi.Void> tkPtr,
  ) {
    return _vrvToolkit_getPageCount(
      tkPtr,
    );
  }

  late final _vrvToolkit_getPageCountPtr =
      _lookup<ffi.NativeFunction<NativeVrvToolkit_getPageCount>>(
          'vrvToolkit_getPageCount');
  late final _vrvToolkit_getPageCount =
      _vrvToolkit_getPageCountPtr.asFunction<DartVrvToolkit_getPageCount>();

  int vrvToolkit_getPageWithElement(
    ffi.Pointer<ffi.Void> tkPtr,
    ffi.Pointer<ffi.Char> xmlId,
  ) {
    return _vrvToolkit_getPageWithElement(
      tkPtr,
      xmlId,
    );
  }
